--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ html {
 
 #navbar {
   border-right: lightgray solid 4px;
-  position: fixed;
+  position: absolute;
   height: 150px;
   width: 100%;
   max-height: 200px;
